tests/fail/value-restriction.el
(import core)
(using core)

(def x (ref list.nil))
